--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,17 @@
-﻿absl-py==2.4.0
-annotated-doc==0.0.4
-anyio==4.12.1
-astunparse==1.6.3
-blinker==1.9.0
-certifi==2026.1.4
-charset-normalizer==3.4.4
-click==8.3.1
-colorama==0.4.6
-filelock==3.24.0
 Flask==3.1.2
 flask-cors==6.0.2
-flatbuffers==25.12.19
-fsspec==2026.2.0
-gast==0.7.0
-google-pasta==0.2.0
-grpcio==1.78.0
-gunicorn==25.1.0
-h11==0.16.0
-h5py==3.15.1
-hf-xet==1.2.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface_hub==1.4.1
-idna==3.4       
-itsdangerous==2.2.0
-Jinja2==3.1.6
-keras==3.13.2
-libclang==18.1.1
-Markdown==3.10.1
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-ml_dtypes==0.5.4
-mpmath==1.3.0
-namex==0.1.0
-networkx==3.6.1
-numpy==2.4.2
-opencv-python==4.13.0.92
-opt_einsum==3.4.0
-optree==0.18.0
-packaging==26.0
-pillow==12.1.0
-protobuf==6.33.5
-Pygments==2.19.2
-PyYAML==6.0.3
-requests==2.32.5
-rich==14.3.2
-safetensors==0.7.0
-setuptools==81.0.0
-shellingham==1.5.4
-six==1.17.0
-sympy==1.14.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-numpy==1.26.4
-protobuf==3.20.3
-tensorboard==2.15.2
-termcolor==3.3.0
-timm==1.0.24
-torch==2.10.0
-torchvision==0.25.0
-tqdm==4.67.3
-typer==0.23.1
-typer-slim==0.23.1
-typing_extensions==4.15.0
-urllib3==2.6.3
-Werkzeug==3.1.5
-wheel==0.46.3
-wrapt==2.1.1
+gunicorn==21.2.0
 
+numpy==1.26.4
+pillow==10.4.0
+opencv-python-headless==4.10.0.84
+
+tensorflow-cpu==2.15.0
+
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
+timm==1.0.24
+
+h5py==3.10.0
+requests==2.32.3
+tqdm==4.66.4
