--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ numpy==1.26.4
 pillow==10.4.0
 opencv-python-headless==4.10.0.84
 
-tensorflow-cpu==2.15.0
+tensorflow-cpu==2.12.0
+keras==2.12.0
 
 torch==2.2.2+cpu
 torchvision==0.17.2+cpu
@@ -17,3 +18,4 @@ timm==1.0.24
 h5py==3.10.0
 requests==2.32.3
 tqdm==4.66.4
+
