--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-Flask==3.1.2
-flask-cors==6.0.2
-gunicorn==21.2.0
+Flask
+flask-cors
+gunicorn
 
-numpy==1.26.4
-pillow==10.4.0
-opencv-python-headless==4.10.0.84
+numpy==1.23.5
+pillow
+opencv-python-headless
 
 tensorflow-cpu==2.12.0
 keras==2.12.0
+h5py==3.8.0
 
 torch==2.2.2+cpu
 torchvision==0.17.2+cpu
-timm==1.0.24
+timm
 
-h5py==3.10.0
-requests==2.32.3
-tqdm==4.66.4
-
+requests
+tqdm
